--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,38 @@
+@font-face {
+    font-family: 'red-hat-text';
+    src: url('./font/static/RedHatText-Regular.ttf');
+}
+
+
 body {
     background-color: #52B788;
 }
+
+header {
+    width: 100%;
+    height: 115px;
+    align-items: center;
+}
+
+.left-side {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 20px;
+}
+
+.title {
+    font-family: 'red-hat-text';
+    color: #fff;
+    font-size: 2.4rem;
+    font-weight: lighter;
+}
+
+.line-divider {
+    width: 200px;
+    border-bottom: 1px solid white;
+}
+
 
 
 
