--- a/src/style.css
+++ b/src/style.css
@@ -6,19 +6,27 @@
 
 body {
     background-color: #52B788;
+    /* display: flex;
+    flex-direction: column; */
 }
 
+/* HEADER */
 header {
-    width: 100%;
+    max-width: 75%;
     height: 115px;
+    display: flex;
+    flex-direction: row;
     align-items: center;
+    justify-content: space-around;
+    margin: auto;
 }
 
+/* Left side of Header */
 .left-side {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-left: 20px;
+    padding-right: 100px;
 }
 
 .title {
@@ -33,9 +41,26 @@ header {
     border-bottom: 1px solid white;
 }
 
+/* Right side of Header */
 
+.right-side {
+    margin-right: 20px;
+}
 
+.settings-button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 25%;
+    border: none;
+    background-color: rgba(255, 255, 255, 65%)
+}
 
+#gear {
+    width: 30px;
+}
 
 
 
