--- a/src/style.css
+++ b/src/style.css
@@ -71,8 +71,8 @@ header {
     height: 393px;
     border-radius: 5%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    /* flex-direction: column; */
+    /* align-items: center; */
     justify-content: center;
     margin-top: 50px;
     box-shadow: 5px 10px 4px rgba(27, 41, 34, 28%);
@@ -80,14 +80,17 @@ header {
 
 .number-box {
     background-color: rgba(149, 213, 178, 47%);
+    box-shadow: 5px 10px 4px rgba(27, 41, 34, 28%);
     width: 300px;
     height: 143px;
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 150px;
+    margin-top: 40px;
     display: flex;
     align-items: center;
     border-radius: 14px;
+    position: absolute;
+    
 }
 
 .timer-text {
