--- a/src/style.css
+++ b/src/style.css
@@ -110,7 +110,8 @@ header {
     bottom: 26.5em;
     border: none;
     border-radius: 30px;
-    background-color: rgba(255, 255, 255, 0.815);
+    background-color: rgba(255, 255, 255, 0);
+    color: rgb(255, 255, 255);
 }
 
 ::placeholder {
@@ -120,6 +121,37 @@ header {
 input[type=number] {
     margin: auto;
 }
+
+input[type=range] {
+    height: 26px;
+    -webkit-appearance: none;
+    margin: 10px 0;
+    width: 50%;
+  }
+  input[type=range]:focus {
+    outline: none;
+  }
+  input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 13px;
+    cursor: pointer;
+    animate: 0.2s;
+    box-shadow: 0px 0px 0px #000000;
+    background-color: #52B788;
+    border-radius: 25px;
+    border: none;
+  }
+  input[type=range]::-webkit-slider-thumb {
+    box-shadow: 0px 0px 0px #000000;
+    border: 0px solid #000000;
+    height: 20px;
+    width: 39px;
+    border-radius: 7px;
+    background: rgba(255, 255, 255, 0.815);
+    cursor: pointer;
+    -webkit-appearance: none;
+    margin-top: -3.5px;
+  }
 
 .buttons-container {
     width: 190px;
