--- a/src/style.css
+++ b/src/style.css
@@ -106,8 +106,8 @@ header {
 
 .input {
     height: 25px;
-    position: absolute;
-    bottom: 26.5em;
+    /* position: absolute;
+    bottom: 26.5em; */
     border: none;
     border-radius: 30px;
     background-color: rgba(255, 255, 255, 0);
@@ -131,16 +131,18 @@ input[type=range] {
   input[type=range]:focus {
     outline: none;
   }
+
+  /* Track */
   input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
     height: 13px;
     cursor: pointer;
-    animate: 0.2s;
     box-shadow: 0px 0px 0px #000000;
     background-color: #52B788;
     border-radius: 25px;
     border: none;
   }
+  /* Knob */
   input[type=range]::-webkit-slider-thumb {
     box-shadow: 0px 0px 0px #000000;
     border: 0px solid #000000;
