--- a/src/style.css
+++ b/src/style.css
@@ -92,7 +92,6 @@ header {
     align-items: center;
     border-radius: 14px;
     position: absolute;
-    
 }
 
 .timer-text {
@@ -104,34 +103,37 @@ header {
     margin: auto;   
 }
 
+.buttons-container {
+    width: 100%;
+    height: 300px;
+    margin: auto;
+    margin-bottom: 10px;
+    display: flex;
+    flex-direction:column;
+    align-items: center;
+    justify-content: center;
+}
+
 .input {
     height: 25px;
-    position: absolute;
-    bottom: 26.5em;
+    /* position: absolute;
+    bottom: 26.5em; */
     border: none;
     border-radius: 30px;
     background-color: rgba(255, 255, 255, 0);
     color: rgb(255, 255, 255);
-}
-
-::placeholder {
-    padding-left: 10px;
-}
-
-input[type=number] {
-    margin: auto;
+    padding-bottom: 6rem;
 }
 
 input[type=range] {
     height: 26px;
     -webkit-appearance: none;
-    margin: 10px 0;
     width: 50%;
   }
+
   input[type=range]:focus {
     outline: none;
   }
-
   /* Track */
   input[type=range]::-webkit-slider-runnable-track {
     width: 100%;
@@ -155,16 +157,6 @@ input[type=range] {
     margin-top: -3.5px;
   }
 
-.buttons-container {
-    width: 190px;
-    height: 180px;
-    margin: auto;
-    margin-bottom: 80px;
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: center;
-}
 
 .timer-button {
     width: 140px;
