--- a/src/style.css
+++ b/src/style.css
@@ -165,10 +165,12 @@ input[type=range] {
     border-radius: 50%;
     box-shadow: 5px 10px 4px rgba(27, 41, 34, 28%);
     background-color: rgba(149, 213, 178, 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .timer-button:active {
-
   box-shadow: 0 5px #666;
   transform: translateY(4px);
 }
@@ -178,8 +180,6 @@ input[type=range] {
     width: 65px;
     height: 65px;
     margin: auto;
-    margin-left: 10px;
-    margin-top: 5px;
 }
 
 
