--- a/src/style.css
+++ b/src/style.css
@@ -207,7 +207,40 @@ input[type=range] {
     width: 25px;
 }
 
+.sound-div {
+    display: flex;
+    flex-direction: row;
+    align-items: space-between;
+    height: 100px;
+    margin-top: 20px;
+}
 
+.modal-divider {
+    border-bottom: 1px solid rgb(49, 49, 49);
+    margin: auto;
+    margin-top: 10px;
+    max-width: 100%;
+}
+
+.sound-title {
+    font-size: .9em;
+    width: 200px;
+    font-family: 'red-hat-text';
+
+}
+
+.sound-form {
+    cursor: pointer;
+    position: relative;
+    width: 100%;
+    color: rgb(120, 120, 120);
+    font-weight: 500;
+    user-select: none;
+    border-radius: 4px;
+    padding: 12px;
+    box-sizing: border-box;
+    font-size: 14px;
+}
 
 
 
